# permutate

./: Cargo.toml  README.md
benches/: my_benchmark.rs
examples/: overview.rs
src/: Readme.md  index_counters.rs  lib.rs  list_wrapper.rs  specializations.rs
src/list_wrapper/: single_list.rs  tuple_of_lists.rs
src/specializations/: list_of_lists.rs  single_list.rs  tuple_of_lists.rs  vec_of_lists.rs
tests/: million_permutations.rs  permutation_values.rs  permutation_values_different_files.rs  reset.rs  single_list_permutation.rs  todo.rs  tuples.rs
