[package]
name = "permutate"
version = "0.3.2"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
license = "MIT"
description = "Generic permutator that permutates singular and multiple lists"
repository = "https://github.com/mmstick/permutate"
documentation = "https://docs.rs/permutate/0.1.0/permutate/"
keywords = ["permutate", "permutator"]
readme = "README.md"

[[bin]]
name = "permutate-bin"
path = "src/bin/main.rs"
doc = false

[profile.release]
lto = true
opt-level = 3

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
